objects/Shift_Stage_Change__c.object
<CustomObject>
    <fields>
        <fullName>Changed_At__c</fullName>
        <label>Changed At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shift_Stage_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Stage__c</fullName>
        <label>From Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration Source</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Shift Stage Changes</relationshipLabel>
        <relationshipName>Shift_Stage_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shift Stage Changes</relationshipLabel>
        <relationshipName>Shift_Stage_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To_Stage__c</fullName>
        <label>To Stage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Shift Stage Change</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Stage Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>